jdk-only,L1 wave 3: narrow to the 21 the measurement allows
WIP — trial2 measurement next.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>